[package]
name = "epita-api"
version = "0.1.0"
authors = ["Hugo BOIS <hugo.bois@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "^1.0"
reqwest = { version = "0.10.8", features = ["blocking"] }